google cp right, dark mode fixes

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul {
 
 .container {
   position: relative;
-  background: rgb(235, 243, 216);
+  background: rgba(192, 247, 244, 0.616);
 }
 
 /* #featured_picture {
@@ -130,7 +130,6 @@ ul {
   background-color: #111 !important;
   color: #eee;
 }
-
 
 [data-theme="dark"] .bg-light {
   background-color: #333 !important;
@@ -156,6 +155,14 @@ ul {
   color: #eee !important;
 }
 
+[data-theme="dark"] .modal-content{
+  background-color: rgb(0, 0, 0) !important;
+}
+
+#copyright_google {
+  background: rgba(192, 247, 244, 0.616);
+}
+
 section{
   display: flex;
   flex-wrap: wrap;
@@ -166,12 +173,17 @@ div.featured_pictures{
   background-color: violet;
   height: 200px;
 }
-img{
+.featured_pictures img{
   height: 200px;
   object-fit: cover;
   max-width: 100%;
   min-width: 100%;
   vertical-align: bottom;
+  transition: transform .2s;
+  border:1px solid #021a40;
+}
+.featured_pictures img:hover{
+  transform: scale(1.5);
 }
 
 /* [FULL SCREEN SPINNER] */
